Creación de header y portada

--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 	<html lang="en">
 	<head>
 		<meta charset="UTF-8">
+		<link rel="stylesheet" type="text/css" href="css/marca-personal.css"/>
 		<title>Ejercicio-MarcaPersonal</title>
 	</head>
 	<body>
-		<header id="header" class="header-contenedor">
-			<figure class="avatar">
-				<img src="images/jasanprofile.jpg" width="138" height="133" alt="Jasan-Profile"/>
-			</figure>
+		<section id="portada" class="portada background"> <!--Portada-->
+		<header id="header" class="header contenedor">
 			<nav class="menu"> <!--Menu-->
 				<ul>
 					<li>
@@ -26,10 +25,13 @@
 				</ul>
 			</nav>
 		</header>
-		<section> <!--Portada-->
-			<div class="Perfil">
+			<figure class="avatar">
+				<img src="images/jasanprofile.jpg" width="188" height="183" alt="Jasan-Profile"/>
+			</figure>
+			<div class="perfil">
 				<h1>Jasan Hernández</h1>
 				<h3>Profesional web</h3>
+				<h2>"Ser más para servir mejor"</h2>
 			</div>	
 		</section>
 		<section class="Formacion">
