--- a/index.html
+++ b/index.html
@@ -34,15 +34,25 @@
 				<h2>"Ser más para servir mejor"</h2>
 			</div>	
 		</section>
-		<section class="Formacion">
-			<div>
+		<section class="contenedor-edu">
+			<div class="formacion">
+				<h2>Formación</h2>
 				<h3>Formal</h3>
 				<p>Tecnologias de la información - 5 semestre - BUAP(Actualmente)</p>
 				<h3>Online</h3>
-				<a href="https://platzi.com/arquitecto/"></a>
-					<img src="images/golden_frontend2x.png" alt="iconFrontend">
-					<p>Carrera Arquitecto Frontend - Platzi(Actualmente)</p>
 			</div>
+				<div class="caja">
+				<div class="carrera">
+				<a href="https://platzi.com/arquitecto/"></a>
+					<img class="edu-item" src="images/golden_frontend2x.png" alt="iconFrontend">
+					<p>Carrera de Arquitecto Frontend - Platzi(Actualmente)</p>
+				</div>
+				<div class="carrera">
+				<a href="https://platzi.com/arquitecto/"></a>
+					<img class="edu-item" src="images/javascript.jpg" alt="iconFrontend">
+					<p>Carrera de Desarrollo JavaScript - Platzi(Actualmente)</p>
+				</div>
+				</div>
 		</section>
 		<section class="Portafolio-section">
 				<h2>Portafolio</h2>
