--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-	<html lang="en">
+<html lang="en">
 	<head>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" type="text/css" href="css/marca-personal.css"/>
@@ -14,7 +14,7 @@
 						<a href="#Home">Home</a>
 					</li>
 					<li>
-						<a href="#Formacion">Formacion</a>
+						<a href="#formacion">Formacion</a>
 					</li>
 					<li>
 						<a href="#Portafolio">Portafolio</a>
@@ -31,11 +31,11 @@
 			<div class="perfil">
 				<h1>Jasan Hernández</h1>
 				<h3>Profesional web</h3>
-				<h2>"Ser más para servir mejor"</h2>
+				<h2>"Ser más, para servir mejor"</h2>
 			</div>	
 		</section>
-		<section class="contenedor-edu">
-			<div class="formacion">
+		<section id="formación class="contenedor-edu" ">
+			<div class="formacion" />
 				<h2>Formación</h2>
 				<h3>Formal</h3>
 				<p>Tecnologias de la información - 5 semestre - BUAP(Actualmente)</p>
@@ -43,19 +43,19 @@
 			</div>
 				<div class="caja">
 				<div class="carrera">
-				<a href="https://platzi.com/arquitecto/"></a>
+				<a href="https://platzi.com/arquitecto/" target="_blank" ></a>
 					<img class="edu-item" src="images/golden_frontend2x.png" alt="iconFrontend">
 					<p>Carrera de Arquitecto Frontend - Platzi(Actualmente)</p>
 				</div>
 				<div class="carrera">
-				<a href="https://platzi.com/arquitecto/"></a>
+				<a href="https://platzi.com/arquitecto/" target="_blank" ></a>
 					<img class="edu-item" src="images/javascript.jpg" alt="iconFrontend">
 					<p>Carrera de Desarrollo JavaScript - Platzi(Actualmente)</p>
 				</div>
 				</div>
 		</section>
 		<section class="Portafolio-section">
-				<h2>Portafolio</h2>
+				<h2 class="section-title">Portafolio</h2>
 		<section class="Portafolio-list">
 			<article class="PortafolioItem"></article>
 					<img class="PortafolioItem-img" src="images/trigoFacil.jpg" width="383" height="196">
@@ -84,6 +84,30 @@
 				</div>
 			</article>
 		</section>
-		</section>	
+		</section>
+		<footer class="footer">
+			<div class="contenedor"></div>
+				<div class="footer-column footer-column-left"></div> Jasan Hernandez - 2017
+				<div class="footer-column footer-column-center"></div>
+				<div class="footer-column footer-column-right"></div>
+				<ul class="enlaces">
+					<li>
+						<a href="https://github.com/JasanHdz" target="_blank">GitHub</a>
+							<i class="fa fa-github"></i>
+					</li>
+					<li>
+						<a href="https://twitter.com/jasan_azael" target="_blank">Twiter</a>
+							<i class="fa fa-twitter"></i>
+					</li>
+					<li>
+						<a href="https://plus.google.com/u/0/+JasanBautista" target="_blank">Google+</a>
+							<i class="fa fa-google"></i>
+					</li>
+					<li>
+						<a href="mailto:jasan814@gmail.com" for="email">Correo</a>
+							<i class="fa fa-correo"></i>
+					</li>
+				</ul>
+		</footer>	
 	</body>
-	</html>	
+</html>	
