--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 			<nav class="menu"> <!--Menu-->
 				<ul>
 					<li>
-						<a href="#Home">Home</a>
+						<a href="index.html">Home</a>
 					</li>
 					<li>
-						<a href="#formacion">Formacion</a>
+						<a href="#formación">Formacion</a>
 					</li>
 					<li>
 						<a href="#Portafolio">Portafolio</a>
@@ -34,7 +34,7 @@
 				<h2>"Ser más, para servir mejor"</h2>
 			</div>	
 		</section>
-		<section id="formación class="contenedor-edu" ">
+		<section id="formación" class="contenedor-edu"/>
 			<div class="formacion" />
 				<h2>Formación</h2>
 				<h3>Formal</h3>
@@ -43,18 +43,18 @@
 			</div>
 				<div class="caja">
 				<div class="carrera">
-				<a href="https://platzi.com/arquitecto/" target="_blank" ></a>
-					<img class="edu-item" src="images/golden_frontend2x.png" alt="iconFrontend">
-					<p>Carrera de Arquitecto Frontend - Platzi(Actualmente)</p>
+					<a href="https://platzi.com/arquitecto/" target="_blank" ></a>
+						<img class="edu-item" src="images/golden_frontend2x.png" alt="iconFrontend">
+						<p>Carrera de Arquitecto Frontend - Platzi(Actualmente)</p>
 				</div>
 				<div class="carrera">
-				<a href="https://platzi.com/arquitecto/" target="_blank" ></a>
-					<img class="edu-item" src="images/javascript.jpg" alt="iconFrontend">
-					<p>Carrera de Desarrollo JavaScript - Platzi(Actualmente)</p>
+					<a href="https://platzi.com/arquitecto/" target="_blank" ></a>
+						<img class="edu-item" src="images/javascript.jpg" alt="iconFrontend">
+						<p>Carrera de Desarrollo JavaScript - Platzi(Actualmente)</p>
 				</div>
 				</div>
 		</section>
-		<section class="Portafolio-section">
+		<section id="Portafolio" class="Portafolio-section">
 				<h2 class="section-title">Portafolio</h2>
 		<section class="Portafolio-list">
 			<article class="PortafolioItem"></article>
