Finalizando-Resposive-desing

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						<a href="#Portafolio">Portafolio</a>
 					</li>
 					<li>
-						<a href="#Agenda">Agenda</a>
+						<a href="#contacto">Contacto</a>
 					</li>
 				</ul>
 			</nav>
@@ -127,7 +127,7 @@
 				</div>
 				</div>
 				<div class="footer-menu">
-				<ul class="enlaces">
+				<ul class="enlaces" id="contacto">
 					<li>
 						<a href="https://github.com/JasanHdz" target="_blank">GitHub</a>
 							<i class="fa fa-github"></i>
