--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 		</section>
 		<footer class="footer">
 			<div class="contenedor"></div>	
-				<div class="formulario">
+				<div class="formulario" id="contacto">
 					<div class="footer-column-left"> 
 						<p>Jasan Hernández - 2017</p> 
 					</div>
@@ -127,7 +127,7 @@
 				</div>
 				</div>
 				<div class="footer-menu">
-				<ul class="enlaces" id="contacto">
+				<ul class="enlaces" >
 					<li>
 						<a href="https://github.com/JasanHdz" target="_blank">GitHub</a>
 							<i class="fa fa-github"></i>
