--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
 			    selector: 'img'
 			});
 		</script>
-		<link rel="stylesheet" type="text/css" href="css/marca-personal.css"/>	
+		<link rel="stylesheet" type="text/css" href="css/marca.min.css"/>
+		<!-- <link rel="stylesheet" type="text/css" href="css/marca-personal.css"/> -->	
 	</body>
 </html>	
