--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1 user-scaleble=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1 user-scaleble=no">
 		<style>
 			body{margin:0}div{display:block}h1{font-size:32px;color:#F2EF13}.header{width:800px;margin:auto}.contenedor{width:auto;max-width:800px}.background{background-image:url(../images/image.jpg);background-size:cover}.portada{color:#fff;padding:20px;height:622px}.menu{font-size:24px;display:inline-flex;margin-left:-225px;right:0}.menu li{display:inline-block;margin-top:-6px;margin-left:30px}.menu li:before{content:'∘';font-size:50px;line-height:20px;color:#fff}.menu a{color:#fff;text-decoration:none}.avatar{margin-top:85px;text-align:center}.avatar img{border-radius:200px}.header{position:relative}.perfil{text-align:center}.perfil h2{color:#5193B4}.formacion p{text-align:center;padding-top:30px}.formacion h2{margin-top:65px;text-align:center;color:#474744}.contenedor-edu{background:#FFFBE0;padding-top:1px;padding-bottom:50px}.formacion h3{margin-top:40px;text-align:center}.header{position:relative}@media screen and (max-width:1024px){.menu{margin-left:60px}}@media screen and (max-width:800px){.menu{margin:0}.menu li{border-left:none}}@media screen and (max-width:680px){.menu li{margin-left:15px}}@media screen and (max-width:630px){.menu{display:block;font-size:25px}.menu li{display:block;text-align:center;margin:0;border-bottom:solid #fff;padding:6px}.menu li:first-child{border-top:solid}.menu li:before{content:none}.avatar{margin-top:60px}}@media screen and (max-width:350px){.portada{padding-bottom:40px}.avatar{margin-right:2px}.menu{font-size:20px}.perfil{margin-left:22px}.formacion{font-size:15px}}
 		</style>
@@ -11,7 +11,8 @@
 	<body>
 		<section id="portada" class="portada background"> <!--Portada-->
 		<header id="header" class="header contenedor">
-			<nav class="menu"> <!--Menu-->
+			<span class="burger-button icon-menu" id="burger-button"></span>
+			<nav class="menu" id="menu"> <!--Menu-->
 				<ul>
 					<li>
 						<a href="index.html">Home</a>
@@ -156,7 +157,33 @@
 			    selector: 'img'
 			});
 		</script>
-		<link rel="stylesheet" type="text/css" href="css/marca.min.css"/>
-		<!-- <link rel="stylesheet" type="text/css" href="css/marca-personal.css"/> -->	
+		<script type="text/javascript">
+			var consulta = window.matchMedia('(max-width: 500px)');
+			consulta.addListener(mediaQuery);
+
+			var $burgerButton = document.getElementById('burger-button');
+			var $menu = document.getElementById('menu');
+			function toggleMenu(){
+				$menu.classList.toggle('active')
+			};
+
+			function mediaQuery(){
+				if(consulta.matches){
+					// Si se cumple hagamos esto
+					console.log('se cumplio la condición');
+					$burgerButton.addEventListener('touchstart', toggleMenu); 
+				} else {
+					$burgerButton.removeEventListener('touchstart', toggleMenu);
+					//Si no se cumple hagamos esto
+					console.log('no se cumplió la condición');
+				}
+			}
+			mediaQuery();
+
+			// $burgerButton.addEventListener('touchstart', toggleMenu); 
+			
+		</script>
+		<!-- <link rel="stylesheet" type="text/css" href="css/marca.min.css"/> -->
+		<link rel="stylesheet" type="text/css" href="css/marca-personal.css"/>	
 	</body>
 </html>	
