--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 			gestos.on('swipeleft', hideMenu);
 			gestos.on('swiperight', showMenu);
 		</script>
-		<!-- <link rel="stylesheet" type="text/css" href="css/marca.min.css"/> -->
-		<link rel="stylesheet" type="text/css" href="css/marca-personal.css"/>	
+		<link rel="stylesheet" type="text/css" href="css/marca.min.css"/>
+		<!-- <link rel="stylesheet" type="text/css" href="css/marca-personal.css"/>	 -->
 	</body>
 </html>	
